<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stock_in_deptname_ly"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:background="@color/list_diver"
    android:layout_height="45dp">
    <LinearLayout
        android:layout_width="0dp"
        android:background="@color/white"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/padding_top_1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/stock_in_tv_dept"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="@dimen/pading_top_buttom"
            android:text="@string/stock_out_dept_title"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/text_size_16"/>

        <com.dcyx.app.mvp.ui.widget.ComboBox
            android:id="@+id/stock_out_et_dept"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/stock_out_dept_hint"
            android:layout_weight="2"
            android:background="@drawable/rounded_edittext"
            android:layout_marginTop="@dimen/padding_top_4"
            android:layout_marginBottom="@dimen/padding_bottom_4"
            android:gravity="left|center"
            android:singleLine="true"
            android:enabled="false"
            android:textColorHint="@color/lightgray"
            android:paddingLeft="@dimen/padding_left_4"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/text_size_16"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding_top_1"
        android:layout_weight="1"
        android:paddingRight="@dimen/padding_right_4"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/stock_in_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:paddingLeft="@dimen/pading_top_buttom"
            android:text="@string/stock_out_person_title"
            android:textColor="@color/black_overlay"
            android:textSize="@dimen/text_size_16"/>

        <EditText
            android:id="@+id/stock_in_et_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/stock_out_person_title_hint"
            android:gravity="left|center"
            android:singleLine="true"
            android:textColorHint="@color/lightgray"
            android:layout_marginTop="@dimen/padding_top_4"
            android:layout_marginBottom="@dimen/padding_bottom_4"
            android:paddingLeft="@dimen/pading_top_buttom"
            android:enabled="false"
            android:textColor="@color/black_overlay"
            android:background="@drawable/rounded_edittext"
            android:textSize="@dimen/text_size_16"/>
    </LinearLayout>
</LinearLayout>