<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include
        android:id="@+id/include_header_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height_base"
        layout="@layout/header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/list_item_diver"
            >
            <RelativeLayout
                android:id="@+id/stock_out_list_comp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/activity_about_us_img_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerInside"
                    android:contentDescription="@null"
                    android:src="@mipmap/lerm"
                    />
                <TextView
                    android:id="@+id/activity_about_us_tv_name"
                    android:layout_below="@id/activity_about_us_img_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_name_desc"
                    android:textColor="@color/text_lightgrey_3"
                    android:textSize="@dimen/text_size_16"/>
                <TextView
                    android:id="@+id/activity_about_us_tv_version"
                    android:layout_below="@id/activity_about_us_tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="v1.0.0"
                    android:textColor="@color/text_lightgrey_3"
                    android:textSize="@dimen/text_size_12"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@id/stock_out_list_comp_name"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"

                    android:background="#fff"
                    android:layout_marginBottom="@dimen/padding_top_1"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_left_10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:text="@string/about_us_title_wechat"
                        android:textColor="@color/text_lightgrey_3"
                        android:textSize="@dimen/text_size_16"/>
                    <TextView
                        android:id="@+id/activity_about_us_wechart_account"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/red"
                        android:textSize="@dimen/text_size_16"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="@dimen/padding_top_1"
                    android:orientation="horizontal"
                    android:background="#fff"
                    android:paddingLeft="@dimen/padding_left_10">

                    <TextView
                        android:id="@+id/fragment_personal_center_tv_sex"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:text="@string/about_us_title_telephone"
                        android:textColor="@color/text_lightgrey_3"
                        android:textSize="@dimen/text_size_16"/>
                    <TextView
                        android:id="@+id/activity_about_us_tel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/red"
                        android:textSize="@dimen/text_size_16"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="#fff"
                    android:layout_marginBottom="@dimen/padding_top_1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_left_10">

                    <TextView
                        android:id="@+id/fragment_personal_center_tv_userid"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:text="@string/about_us_title_email"
                        android:textColor="@color/text_lightgrey_3"
                        android:textSize="@dimen/text_size_16"/>

                    <TextView
                        android:id="@+id/activity_about_us_email"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/red"
                        android:textSize="@dimen/text_size_16"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="@dimen/padding_top_1"
                    android:orientation="horizontal"
                    android:background="#fff"
                    android:paddingLeft="@dimen/padding_left_10">

                    <TextView
                        android:id="@+id/fragment_personal_center_tv_tel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:text="@string/about_us_title_official"
                        android:textColor="@color/text_lightgrey_3"
                        android:textSize="@dimen/text_size_16"/>
                    <TextView
                        android:id="@+id/activity_about_us_official_website"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text=""
                        android:textColor="@color/red"
                        android:textSize="@dimen/text_size_16"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/activity_about_us_gesture_layout"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="@dimen/padding_top_1"
                    android:visibility="gone"
                    android:orientation="horizontal"
                    android:background="#fff"
                    android:paddingLeft="@dimen/padding_left_10">

                    <TextView
                        android:id="@+id/activity_about_us_gesture"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:gravity="left|center"
                        android:text="@string/about_us_title_gesture"
                        android:textColor="@color/text_lightgrey_3"
                        android:textSize="@dimen/text_size_16"/>
                    <com.dcyx.app.mvp.ui.widget.SwitchView
                        android:id="@+id/activity_about_us_gesture_switch_view"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginTop="@dimen/_5dp"
                        android:layout_marginBottom="@dimen/_5dp"
                        android:layout_marginRight="@dimen/_2dp"
                        android:layout_height="match_parent"
                        >
                    </com.dcyx.app.mvp.ui.widget.SwitchView>

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/activity_about_us_update_layout"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/border_radius_10"
                    android:layout_height="45dp"
                    android:layout_marginBottom="@dimen/padding_top_1"
                    android:orientation="horizontal"
                    android:background="#fff"
                    android:paddingLeft="@dimen/padding_left_10">

                    <TextView
                        android:id="@+id/activity_about_us_update"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/about_us_title_update"
                        android:textColor="@color/red_pat"
                        android:textSize="@dimen/text_size_16"/>
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:id="@+id/fragment_personal_center_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/border_radius_10"
                >
                <TextView
                    android:id="@+id/fragment_personal_center_tv_lerm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_company_description"
                    android:textColor="@color/text_lightgrey_3"
                    android:textSize="@dimen/text_size_14"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>